# lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  EVALS.md  FEEDBACK_TARGETS.md  OUTREACH.md  PROJECT2_SYNC.md  PULSE_BACKLOG.md  REFERENCES.md  REVIEW_POLICY.md  ROADMAP.md  index.html
examples/: lightrag_rows.json  neo4j_rows.json  vector_results.json
src/knitweb_lens/: __init__.py  adapters.py  capabilities.py  cli.py  context.py  eval.py  reliability.py  retriever.py  rlm.py  server.py  types.py  util.py
tests/: test_adapters.py  test_capabilities.py  test_cli.py  test_context.py  test_eval.py  test_project_sync.py  test_reliability.py  test_retriever.py  test_rlm.py
tests/fixtures/: pulse_web_export.json
tools/: add_pulse_issues_to_project.py
